--- a/api.css
+++ b/api.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: torus;
-  src: url(/api/fonts/Torus.otf);
+  src: url(https://cdn.jsdelivr.net/gh/JiaLeLab/api@latest/torus.otf);
 }
 
 .unline {
@@ -15,11 +15,3 @@
   background: linear-gradient(transparent, #27d3f5);
   border-radius: 6px;
 }
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
