--- a/login.css
+++ b/login.css
@@ -11,7 +11,7 @@ section{
     min-height: 100vh;
     width: 100%;
     
-    background: url('https://cdn.jsdelivr.net/gh/JiaLeLab/cdn@master/background_jiale.jpg')no-repeat;
+    background: url('https://cdn.jsdelivr.net/gh/JiaLeLab/cdn@latest/background/background_jiale_1.png')no-repeat;
     background-position: center;
     background-size: cover;
 }
